# PrefixScript

./: .gitignore  CMakeLists.txt  INSTALL  LICENCE  README  Stacky.cpp  changelogs.odt  commands.cpp  core.cc  defs.cc  defs.hh  doc.html  doc.js  doc.js.in  extensions.cpp  extensions.hh  getversion.pl  housekeeping.cpp  main.cc  main.cpp  mod_bmath.cc  mod_cnf.cc  mod_logic.cc  mod_math.cc  mod_memory.cc  mod_script.cc  mod_stack.cc  mod_strings.cc  morecommands.cpp  pfsconfig  stacks.cpp  test.presc  testsuite-0.012.presc  testsuite-functionload.presc  testsuite.presc  versioninfo.h  versioninfo.h.in
commandparser/: commandparser.cc  commandparser.hh
commandregister/: commandregister.cc  commandregister.hh
corelang/: arithmetic.cc  corelang.cc  corelang.hh  math.cc  repetition.cc  stackmanagement.cc  stringmanagement.cc
